codex-rs/tui/src/snapshots/codex_tui__app__tests__agent_picker_item_name.snap
---
source: tui/src/app.rs
expression: snapshot
---
Main [default] | 00000000-0000-0000-0000-000000000123
Robie [explorer] | 00000000-0000-0000-0000-000000000123
Robie | 00000000-0000-0000-0000-000000000123
[explorer] | 00000000-0000-0000-0000-000000000123
Agent | 00000000-0000-0000-0000-000000000123
