codex-rs/tui/src/snapshots/codex_tui__app__tests__backtrack_branch_failure_restores_selected_prompt.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
■ Failed to edit the selected prompt: branch unavailable
