codex-rs/tui/src/snapshots/codex_tui__app__tests__clear_ui_header_fast_status_gpt54_only.snap
---
source: tui/src/app.rs
expression: rendered
---
╭────────────────────────────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)                       │
│                                                    │
│ model:     gpt-5.4 xhigh   fast   /model to change │
│ directory: /tmp/project                            │
╰────────────────────────────────────────────────────╯
