codex-rs/tui/src/snapshots/codex_tui__app__tests__cyber_model_auto_review_notice.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
⚠ Cyber models default to "Approve for me" for safety reasons.
