codex-rs/tui/src/snapshots/codex_tui__app__tests__external_editor_writable_directory_rejected.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
■ Failed to open editor: editor directory must not be writable
