codex-rs/tui/src/snapshots/codex_tui__app__tests__first_session_header_with_model_nux.snap
---
source: tui/src/app.rs
expression: rendered
---
╭─────────────────────────────────────────────╮
│ >_ OpenAI Codex (v0.0.0)                    │
│                                             │
│ model:     gpt-test high   /model to change │
│ directory: /tmp/project                     │
╰─────────────────────────────────────────────╯

  To get started, describe a task or try one of these commands:

  /init - create an AGENTS.md file with instructions for Codex
  /status - show current session configuration
  /permissions - choose what Codex is allowed to do
  /model - choose what model and reasoning effort to use
  /review - review any changes and find issues

  Tip: New Spark is now available to you.
