codex-rs/tui/src/snapshots/codex_tui__app__tests__history_replay_preserves_separator_after_session_header.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
session header

first message

second message
